# quantizr

./: Cargo.toml
example/: Cargo.toml
src/: capi.rs  cluster.rs  colormap.rs  error.rs  histogram.rs  lib.rs  ord_float.rs  palette.rs  quantize.rs  vpsearch.rs
